[metadata]
name = pocoglot
version = 0.9.0
author = Santiago Lizardo
author_email = santiagolizardo@users.noreply.github.com
url = https://github.com/reconmap/pocoglot
keywords = codegen model entity golang php csharp yaml
license = MIT license

[options]
packages = pocoglot
include_package_data = True
install_requires = 
	coloredlogs
	Jinja2
	click

[options.entry_points]
console_scripts =
	pocoglot = pocoglot.cli:main



