[metadata]
name = pocoglot
version = attr: pocoglot.__version__
author = Santiago Lizardo
author_email = santiagolizardo@users.noreply.github.com
url = https://github.com/reconmap/pocoglot
keywords = codegen model entity golang php csharp yaml
license = MIT license
description = Pocoglot generates POCOs in multiple languages from a YAML definition file.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Programming Language :: Python :: 3

[options]
packages = pocoglot
include_package_data = True
python_requires = >= 3.9
install_requires = 
	coloredlogs
	Jinja2
	click

[options.entry_points]
console_scripts =
	pocoglot = pocoglot.cli:main



